# stellux

./: .gitignore  LICENSE  README.md  validation-todo.md
validation/parameter-allocation-experiments/: .env.example  .gitignore  .pre-commit-config.yaml  DATASET_MANIFEST.json  DIAGNOSIS_REPORT.md  MILESTONE1_TEST_REPORT.md  MILESTONE2_REPORT.md  MILESTONE2_VERIFICATION.md  MILESTONE4_REPORT.md  MILESTONE5_REPORT.md  Makefile  PROJECT_STATUS.md  README.md  check_data_size.py  pyproject.toml  requirements.txt  run_experiment.py  test_data_pipeline.py  test_fix.py  test_loss_calculation.py  test_model_functional.py  test_model_syntax.py  verify_milestone2.py  verify_param_budget.py
validation/parameter-allocation-experiments/.github/workflows/: ci.yml
validation/parameter-allocation-experiments/configs/: embed_ratio.yaml  glu_expansion.yaml  phase1_embedding_sweep.yaml  phase1_glu_sweep.yaml
validation/parameter-allocation-experiments/data/wikitext-2-test/: train.txt  valid.txt
validation/parameter-allocation-experiments/phase1_results/: extract_winners.py
validation/parameter-allocation-experiments/phase1_results/configs/: base_config.yaml
validation/parameter-allocation-experiments/results/phase1/: .glu_results_20251028_203855.json.swp  WINNERS.txt  all_results_20251028_184149.json  all_results_20251028_184910.json  all_results_20251028_185555.json  all_results_20251028_185953.json  all_results_20251028_193703.json  all_results_20251028_203855.json  embedding_results_20251028_184907.json  embedding_results_20251028_185552.json  embedding_results_20251028_185950.json  embedding_results_20251028_192056.json  embedding_results_20251028_193658.json  glu_results_20251028_184910.json  glu_results_20251028_185555.json  glu_results_20251028_185953.json  glu_results_20251028_193653.json  (+2 more)
validation/parameter-allocation-experiments/scripts/: README.md  __init__.py  aggregate_phase1_results.py  aggregate_results.py  analyze_validation_set.py  check_data_leakage.py  download_smallbench.py  download_wikitext.py  eval_smallbench.py  generate_plots.py  preprocess_lm.py  quick_check.py  run_all_validations.py  run_evaluation.py  run_phase1_ranking.py  verify_perplexity.py
validation/parameter-allocation-experiments/src/: __init__.py  train.py
validation/parameter-allocation-experiments/tests/: __init__.py  test_basic.py  test_data_scripts.py  test_eval.py  test_model.py  test_phase1.py
(+31 files in other folders)
